force-app/main/default/objects/SVMXC__Installed_Product__c/fields/SVMXC__Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used by Reverse Logistics Module. Reference to the latest service contract for this installed product. Derived automatically upon creating/updating service contract</description>
    <label>Service Contract</label>
    <referenceTo>SVMXC__Service_Contract__c</referenceTo>
    <relationshipName>Installed_Products</relationshipName>
    <type>Lookup</type>
</CustomField>