force-app/main/default/objects/SVMXC__Installed_Product__c/fields/SVMXC__Site__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current physical location of the product. This is a lookup to an existing location record</description>
    <inlineHelpText>Current physical location of the product. This is a lookup to an existing site record</inlineHelpText>
    <label>Location</label>
    <referenceTo>SVMXC__Site__c</referenceTo>
    <relationshipName>R00N70000001hzcqEAA</relationshipName>
    <type>Lookup</type>
</CustomField>