force-app/main/default/objects/SVMXC__Installed_Product__c/fields/SVMXC__SM_External_Site__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_External_Site__c</fullName>
    <description>External system unique ID of the location related to the installed product.</description>
    <inlineHelpText>External system unique ID of the location related to the installed product.</inlineHelpText>
    <label>Location (External)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>