force-app/main/default/objects/SVMXC__Installed_Product__c/fields/SVMXC__State__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__State__c</fullName>
    <description>“State/Province” part of the physical location address</description>
    <inlineHelpText>“State/Province” part of the physical location address</inlineHelpText>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>