force-app/main/default/objects/SVMXC__Installed_Product__c/fields/SVMXC__Status__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Status__c</fullName>
    <description>Current status of the installed product.</description>
    <inlineHelpText>Current status of the installed product.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shipped</fullName>
                <default>true</default>
                <label>Shipped</label>
            </value>
            <value>
                <fullName>Returned Vendor</fullName>
            </value>
            <value>
                <fullName>Non Calibrated</fullName>
            </value>
            <value>
                <fullName>Awaiting Installation</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
            <value>
                <fullName>Scrapped</fullName>
            </value>
            <value>
                <fullName>Loaned</fullName>
            </value>
            <value>
                <fullName>De-Installed</fullName>
            </value>
            <value>
                <fullName>Calibrated</fullName>
            </value>
            <value>
                <fullName>Not Calibrated Expired</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>