force-app/main/default/objects/SVMXC__Installed_Product__c/fields/SVMXC__Sub_Location__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Sub_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Location</label>
    <referenceTo>SVMXC__Sub_Location__c</referenceTo>
    <relationshipName>Installed_Products_del</relationshipName>
    <type>Lookup</type>
</CustomField>