force-app/main/default/objects/SVMXC__Installed_Product__c/fields/SVMXC__Top_Level__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Top_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Serial/Lot number of the top-most product in the installed product hierarchy.</description>
    <inlineHelpText>Serial/Lot number of the top-most product in the installed product hierarchy.</inlineHelpText>
    <label>Top-Level</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipName>R00N70000001hzcvEAA</relationshipName>
    <type>Lookup</type>
</CustomField>