force-app/main/default/objects/SVMXC__Installed_Product__c/fields/SVMXC__Warranty__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Warranty__c</fullName>
    <label>Warranty</label>
    <length>40</length>
    <type>Text</type>
</CustomField>