force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Tool_Calibration_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Tool_Calibration_Due_Date__c</fullName>
    <description>This is the date by which the tool needs to be recalibrated. Notifications go out to Field users to ensure tool calibration is done by the due date. Manually updated by users.</description>
    <label>Tool Calibration Due Date</label>
    <type>Date</type>
</CustomField>