force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Identifier</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3730xl</fullName>
            </value>
            <value>
                <fullName>454</fullName>
            </value>
            <value>
                <fullName>7900</fullName>
            </value>
            <value>
                <fullName>Additional Datastore/Facility</fullName>
            </value>
            <value>
                <fullName>API Package</fullName>
            </value>
            <value>
                <fullName>API Script</fullName>
            </value>
            <value>
                <fullName>Bartender Integration</fullName>
            </value>
            <value>
                <fullName>Client Licenses</fullName>
            </value>
            <value>
                <fullName>Configuration Slice</fullName>
            </value>
            <value>
                <fullName>Custom AI Integration</fullName>
            </value>
            <value>
                <fullName>Custom JBOSS settings</fullName>
            </value>
            <value>
                <fullName>Custom Product</fullName>
            </value>
            <value>
                <fullName>Custom Reports</fullName>
            </value>
            <value>
                <fullName>Database Customization</fullName>
            </value>
            <value>
                <fullName>Data Model Package</fullName>
            </value>
            <value>
                <fullName>GeneChip</fullName>
            </value>
            <value>
                <fullName>HiScan</fullName>
            </value>
            <value>
                <fullName>HiSeq 2000/2500</fullName>
            </value>
            <value>
                <fullName>HiSeq 3000</fullName>
            </value>
            <value>
                <fullName>HiSeq 4000</fullName>
            </value>
            <value>
                <fullName>HiSeq Integration</fullName>
            </value>
            <value>
                <fullName>HiSeqX</fullName>
            </value>
            <value>
                <fullName>Infinium Integration</fullName>
            </value>
            <value>
                <fullName>Ion PGM</fullName>
            </value>
            <value>
                <fullName>Ion Proton</fullName>
            </value>
            <value>
                <fullName>Ion Torrent</fullName>
            </value>
            <value>
                <fullName>iScan</fullName>
            </value>
            <value>
                <fullName>Lab Instrument Toolkit</fullName>
            </value>
            <value>
                <fullName>LabLink Branding</fullName>
            </value>
            <value>
                <fullName>LabLink Customised Sample Import Sheets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>