force-app/main/default/objects/SVMXC__Installed_Product__c/fields/UDI__c.field-meta.xml
<CustomField>
    <fullName>UDI__c</fullName>
    <description>To capture the DI field of Product.
Automatically flows from associated Product.</description>
    <formula>IF( SVMXC__Product__r.ProductCode = &apos;20014054&apos; &amp;&amp; DATEVALUE(CreatedDate) &lt;= DATEVALUE(&quot;2022-05-31&quot;) , &apos;&apos;, SVMXC__Product__r.Device_Identifier__c)</formula>
    <label>UDI</label>
    <type>Text</type>
</CustomField>