force-app/main/default/objects/SVMXC__Installed_Product__c/fields/Upgrade_Type__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Type__c</fullName>
    <description>Updated from Technical Attributes trigger. Read only for users.</description>
    <label>Upgrade Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autoloader II Upgrade</fullName>
            </value>
            <value>
                <fullName>Autoloader IIx Upgrade</fullName>
            </value>
            <value>
                <fullName>iScan+ Upgrade</fullName>
            </value>
            <value>
                <fullName>HiSeq 1500 Upgrade from 1000</fullName>
            </value>
            <value>
                <fullName>HiSeq 2000 Upgrade from 1000</fullName>
            </value>
            <value>
                <fullName>HiSeq 2500 Upgrade from 2000</fullName>
            </value>
            <value>
                <fullName>HiSeq 4000 Upgrade from 3000</fullName>
            </value>
            <value>
                <fullName>MiSeq II Upgrade</fullName>
            </value>
            <value>
                <fullName>Miseq FGx Upgrade</fullName>
            </value>
            <value>
                <fullName>NextSeq Airflow HW + SW NCS4.0</fullName>
            </value>
            <value>
                <fullName>NextSeq 550 Upgrade from NextSeq 500</fullName>
            </value>
            <value>
                <fullName>NextSeq SW NCS4.0 Only</fullName>
            </value>
            <value>
                <fullName>IVD Upgrade</fullName>
            </value>
            <value>
                <fullName>RUO Upgrade (From IVD)</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>2.3</fullName>
            </value>
            <value>
                <fullName>NextSeq 2000 Upgrade from NextSeq 1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>