force-app/main/default/objects/SVMXC__Installed_Product__c/recordTypes/LIMS_Software.recordType-meta.xml
<RecordType>
    <fullName>LIMS_Software</fullName>
    <active>true</active>
    <label>LIMS Software</label>
</RecordType>