force-app/main/default/objects/SVMXC__Installed_Product__c/recordTypes/Tools.recordType-meta.xml
<RecordType>
    <fullName>Tools</fullName>
    <active>true</active>
    <description>Record Type for all Types of Tools</description>
    <label>Tools</label>
</RecordType>