force-app/main/default/objects/SVMXC__Installed_Product__c/validationRules/BSL_Required_Upon_Install.validationRule-meta.xml
<ValidationRule>
    <fullName>BSL_Required_Upon_Install</fullName>
    <active>true</active>
    <description>BSL Level is required when Date Installed is populated.</description>
    <errorConditionFormula>AND (
Service_Product_Type__c = $Label.IPServiceProductTypeInstrument,
NOT(ISBLANK(SVMXC__Date_Installed__c)),
ISBLANK(TEXT(BSL_Level__c)),
NOT($Profile.Name ==$Label.Integration_SAP_Service),
NOT($Profile.Name ==$Label.Integration_Service_SNAP_Profile),
CASE($Profile.Name, &quot;System Administrator&quot;, 1,0) = 0
)</errorConditionFormula>
    <errorMessage>BSL Level is required when Date Installed is populated.</errorMessage>
</ValidationRule>