force-app/main/default/objects/SVMXC__Installed_Product__c/validationRules/CheckDateInstalled_AcceptanceDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckDateInstalled_AcceptanceDate</fullName>
    <active>true</active>
    <description>For INC0207089 
Installed product must have date Installed and Acceptance Date filled for: 
Product Type = Instrument 
Status = installed</description>
    <errorConditionFormula>AND( 
NOT($Profile.Name ==$Label.Integration_SAP_Service), 
NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
Service_Product_Type__c =&apos;Instrument&apos;, 
IsChanged(SVMXC__Status__c),
ISPICKVAL(SVMXC__Status__c, &apos;Installed&apos;), 
OR( 
ISBLANK( Acceptance_Date__c ), 
ISBLANK( SVMXC__Date_Installed__c ) 
) 
)</errorConditionFormula>
    <errorMessage>Please enter Date Installed and Acceptance Date.</errorMessage>
</ValidationRule>