force-app/main/default/objects/SVMXC__Installed_Product__c/validationRules/CheckEditOperationStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEditOperationStatus</fullName>
    <active>true</active>
    <description>To prevent edit operation status field when Product Class is &quot;Instrument&quot;.</description>
    <errorConditionFormula>AND(
    NOT( Service_Product_Type__c  = $Label.IPServiceProductTypeInstrument),
	NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
	NOT($Profile.Name==$Label.ProfileSystemAdmin),
    ISCHANGED( Operation_Status__c )
    /*Prevent edit operation status field when Product Class is &quot;Instrument&quot;*/
    )</errorConditionFormula>
    <errorMessage>Operation Status is not relevant for a service part</errorMessage>
</ValidationRule>