force-app/main/default/objects/SVMXC__Installed_Product__c/validationRules/CheckEditSerialNoIPIdForNonTool.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEditSerialNoIPIdForNonTool</fullName>
    <active>true</active>
    <description>This rule prevent user for editing serial number and installed product Id for non Tools IP.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
    NOT($Profile.Name==$Label.ProfileSystemAdmin), 
    NOT($Profile.Name==$Label.Integration_Service_SNAP_Profile ),
    NOT($Profile.Name ==  $Label.Profile_SNAP_Integration),
    NOT($Profile.Name ==  $Label.Profile_Commercial_and_Revenue_Operations),
    NOT($Profile.Name ==  $Label.ProfileDataSteward),
    OR(
        ISCHANGED( SVMXC__Serial_Lot_Number__c ),
        ISCHANGED( Name )
    )
)</errorConditionFormula>
    <errorMessage>Unable to save. Your user profile does not allow editing on Serial/Lot Number and Installed product ID. Select cancel and do not edit those fields before selecting save.</errorMessage>
</ValidationRule>