force-app/main/default/objects/SVMXC__Installed_Product__c/validationRules/CheckStatusForTools.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckStatusForTools</fullName>
    <active>false</active>
    <description>Prevent status like &apos;calibration&apos;, &apos;returned&apos; and &apos;not calibrated&apos; if  the material class is tools</description>
    <errorConditionFormula>AND(
		NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
    NOT(
        CONTAINS(TEXT(SVMXC__Product__r.Service_Product_Type__c),$Label.InstalledProductMaterialClassTools
        )),
    OR(
         TEXT(SVMXC__Status__c)==$Label.InstalledProductStatusCalibrated,
         TEXT(SVMXC__Status__c)==$Label.InstalledProductStatusNotCalibrated,
		 AND(
			NOT(CONTAINS(TEXT(SVMXC__Product__r.Service_Product_Type__c),$Label.InstalledProductMaterialClassInstrument)),
			TEXT(SVMXC__Status__c)==$Label.InstalledProductStatusReturned
		 )
    )
)</errorConditionFormula>
    <errorMessage>Calibrated ,Not Calibrated,Returned Status are only applicable for Tools Material Class</errorMessage>
</ValidationRule>