force-app/main/default/objects/SVMXC__Installed_Product__c/validationRules/DateInstalled_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>DateInstalled_Check</fullName>
    <active>false</active>
    <description>&quot;Date Installed&quot; date cannot be greater than &quot;Acceptance Date&quot;</description>
    <errorConditionFormula>AND (
SVMXC__Date_Installed__c &gt; Acceptance_Date__c,
CASE($Profile.Name, &quot;System Administrator&quot;, 1,0) = 0
)</errorConditionFormula>
    <errorMessage>Date Installed cannot be greater Acceptance Date.</errorMessage>
</ValidationRule>