force-app/main/default/objects/SVMXC__Installed_Product__c/validationRules/No_AcceptanceDate_Without_DateInstalled.validationRule-meta.xml
<ValidationRule>
    <fullName>No_AcceptanceDate_Without_DateInstalled</fullName>
    <active>false</active>
    <description>&quot;Date Installed&quot; must have a value if &quot;Acceptance Date&quot; has value</description>
    <errorConditionFormula>AND
(
ISBLANK(SVMXC__Date_Installed__c),
NOT(ISBLANK(Acceptance_Date__c))
)</errorConditionFormula>
    <errorMessage>When entering an Acceptance Date, please also enter a Date Installed.</errorMessage>
</ValidationRule>