force-app/main/default/objects/SVMXC__Installed_Product__c/validationRules/PreventCalibratedStatusOnExpiredTool.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventCalibratedStatusOnExpiredTool</fullName>
    <active>true</active>
    <description>Prevents a user from changing the tool status to Calibrated if the Tool Calibration Due Date is in the past.</description>
    <errorConditionFormula>AND(
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
CONTAINS(TEXT(SVMXC__Product__r.Service_Product_Type__c),$Label.InstalledProductMaterialClassTools),
TEXT(SVMXC__Status__c)==$Label.InstalledProductStatusCalibrated,
AND(NOT(ISBLANK(Tool_Calibration_Due_Date__c)),(Tool_Calibration_Due_Date__c &lt; TODAY()))
)</errorConditionFormula>
    <errorMessage>Calibrated Status cannot be selected if the Tool Calibration Due date has expired</errorMessage>
</ValidationRule>