force-app/main/default/objects/SVMXC__Installed_Product__c/validationRules/RestrictInstStatusToSpecificValues.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictInstStatusToSpecificValues</fullName>
    <active>true</active>
    <description>CMCM-2157 Restrict instrument status field to specific values.</description>
    <errorConditionFormula>AND(
NOT($Profile.Name ==$Label.Integration_SAP_Service),
NOT($Profile.Name ==$Label.Integration_Service_SNAP_Profile),
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
CONTAINS(TEXT(SVMXC__Product__r.Service_Product_Type__c),
$Label.InstalledProductMaterialClassInstrument
),
ISCHANGED(SVMXC__Status__c),
NOT(TEXT(SVMXC__Status__c)== $Label.InstalledProductStatusShipped),
NOT(TEXT(SVMXC__Status__c)== $Label.InstalledProductStatusAwaitingInstallation),
NOT(TEXT(SVMXC__Status__c)== $Label.InstalledProductStatusInstalled),
NOT(TEXT(SVMXC__Status__c)== $Label.InstalledProductStatusDecommissioned),
NOT(TEXT(SVMXC__Status__c)== $Label.InstalledProductStatusReturned),
NOT(TEXT(SVMXC__Status__c)== $Label.InstalledProductStatusScrapped)
)</errorConditionFormula>
    <errorMessage>A non-allowed status has been selected for this Instrument. Please choose among the following
values: Shipped, Awaiting Installation, Installed, Decommissioned, Returned or Scrapped</errorMessage>
</ValidationRule>