force-app/main/default/objects/SVMXC__Installed_Product__c/validationRules/RestrictIPCreationFromProactive.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictIPCreationFromProactive</fullName>
    <active>true</active>
    <description>Validation rule to avoid installed product creation from Proactive system.</description>
    <errorConditionFormula>AND(
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
ISNEW(),
ISBLANK(ERP_Equipment_ID__c),
$Profile.Name == $Label.Integration_Service_SNAP_Profile
)</errorConditionFormula>
    <errorMessage>Installed Products cannot be created by Proactive system.</errorMessage>
</ValidationRule>