force-app/main/default/objects/SVMXC__Installed_Product__c/validationRules/Retry_Validation_Dummy.validationRule-meta.xml
<ValidationRule>
    <fullName>Retry_Validation_Dummy</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNEW())</errorConditionFormula>
    <errorMessage>Installed Product Cannot be edited</errorMessage>
</ValidationRule>