force-app/main/default/objects/SVMXC__Installed_Product__c/listViews/Dragen_India.listView-meta.xml
<ListView>
	<fullName>Dragen_India</fullName>
	<columns>NAME</columns>
	<columns>SVMXC__Company__c</columns>
	<columns>SVMXC__Date_Installed__c</columns>
	<columns>Latest_Expiring_Contract_End_Date__c</columns>
	<columns>Latest_Expiring_Contract_Status__c</columns>
	<columns>Latest_Expiring_Service_Contract__c</columns>
	<columns>Operation_Status__c</columns>
	<filterScope>Everything</filterScope>
	<filters>
		<field>Product_Code__c</field>
		<operation>equals</operation>
		<value>20038896</value>
	</filters>
	<label>Dragen India</label>
	<sharedTo>
		<portalRoleAndSubordinates>PremasLifeSciencesPvtLtdPartnerExecutive1</portalRoleAndSubordinates>
	</sharedTo>
</ListView>