force-app/main/default/objects/SVMXC__Installed_Product__c/listViews/Installed_Product_NONFRU.listView-meta.xml
<ListView>
    <fullName>Installed_Product_NONFRU</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Product_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Description__c</columns>
    <columns>SVMXC__Serial_Lot_Number__c</columns>
    <columns>SVMXC__Company__c</columns>
    <columns>SVMXC__Status__c</columns>
    <columns>SVMXC__Date_Installed__c</columns>
    <columns>SVMXC__Site__c</columns>
    <columns>Service_Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Product_Type__c</field>
        <operation>equals</operation>
        <value>NONFRU</value>
    </filters>
    <label>Installed Product - NONFRU</label>
</ListView>