force-app/main/default/objects/SVMXC__Installed_Product__c/listViews/Installed_Products_Expiration.listView-meta.xml
<ListView>
    <fullName>Installed_Products_Expiration</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Description__c</columns>
    <columns>SVMXC__Serial_Lot_Number__c</columns>
    <columns>Tool_Calibration_Due_Date__c</columns>
    <columns>Service_Product_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>No_of_Days_till_Expiry__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>No_of_Days_till_Expiry__c</field>
        <operation>lessThan</operation>
        <value>28</value>
    </filters>
    <label>Installed Products Expiration</label>
    <language>en_US</language>
</ListView>