force-app/main/default/objects/SVMXC__Installed_Product__c/listViews/Instruments_Installed_since_2_9.listView-meta.xml
<ListView>
    <fullName>Instruments_Installed_since_2_9</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Date_Installed__c</columns>
    <columns>Acceptance_Date__c</columns>
    <columns>SVMXC__Date_Shipped__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>SVMXC__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>2/9/2010 12:00 AM</value>
    </filters>
    <label>Instruments Installed since 2/9</label>
    <sharedTo>
        <role>GIS</role>
    </sharedTo>
</ListView>